refactor(chy-boot): 重构代码
- 修正了部分代码中的注释和命名
- 更新了 Dockerfile 中的应用名称
- 修改了 Jenkinsfile.groovy 中的项目名称和 Git 地址